feat(pdf-analysis): add advanced PDF analysis capabilities
Introduce new features for PDF analysis including text extraction with position information, image extraction and processing, table structure detection, header and footer detection, and page-to-image conversion with Base64 encoding. Enhance the PdfAnalysisService to generate detailed page reports and improve maintainability with refactored code.